fixed add card issue on server